add existing files

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 	<!-- Main Stylesheets -->
 	<link rel="stylesheet" href="css/style.css" />
 
+	<!-- This is me trying to link the background-->
+	<link rel="stylesheet" href="script.js">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="index2.html">
 
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
